# hypervisor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  esP.lom.trt  monitor_log.txt
docs/: eac-hardening-report-2026-07-09.md  eac-hv-research-2026-07.md  iso-test-log-2026-07.md  phase0-cmos-retention.md  research-report-2026-07-09.md
driver/: Cargo.toml  build.rs  matrix.inf
driver/src/: expanded_stack.rs  lib.rs  seh.c
exports/: 164256-rust-reversal-structs-offsets-1259_2026-07-01T16-15-04-047Z.json  164256-rust-reversal-structs-offsets-1262_2026-07-03T01-36-56-993Z.json
hypervisor/: Cargo.toml  build.rs
hypervisor/src/: error.rs  lib.rs
hypervisor/src/intel/: bugcheck_hook.rs  client_read.rs  controls.rs  descriptor.rs  diag.rs  diag_trace.rs  events.rs  host_idt.rs  invept.rs  invvpid.rs  lbr.rs  mod.rs  msr_bitmap.rs  paging.rs  segmentation.rs  shared_data.rs  support.rs  vcpu.rs  vmcs.rs  vmerror.rs  vmlaunch.rs  vmm.rs  vmstack.rs  vmx.rs  vmxon.rs
hypervisor/src/intel/ept/: hooks.rs  mod.rs  mtrr.rs  paging.rs
hypervisor/src/intel/vmexit/: cpuid.rs  cr.rs  ept.rs  ept_violation.rs  exception.rs  idle.rs  invd.rs  invept.rs  invvpid.rs  mod.rs  msr.rs  mtf.rs  rdtsc.rs  vmcall.rs  xsetbv.rs
hypervisor/src/utils/: addresses.rs  alloc.rs  capture.rs  function_hook.rs  instructions.rs  nt.rs  processor.rs
scripts/: build_client.bat  build_client_pt0_diag.bat  build_release.bat  build_sign.bat  build_stage.bat  collect_hv_reboot.bat  collect_watch_pt0_after_reboot.bat  debug_stage.bat  enable_testsign.bat  finalize_driver.ps1  load.bat  map_driver.bat  restore_game_mode.bat  scan_release_strings.ps1  start_hv.bat  start_hv_client.bat  start_hv_client_pt0_diag.bat  start_hv_game_diag.bat  start_hv_game_diag.ps1  start_test_client.bat  start_test_server.bat  unload.bat  watch_hv_breadcrumbs.bat  watch_hv_breadcrumbs.ps1  watch_hv_game.bat  watch_hv_game.ps1  watch_hv_game_pt0_diag.bat
tools/: cpuid_ping.rs  freeze_monitor.bat  freeze_monitor.ps1  freeze_watchdog.rs  hv_breadcrumb.rs  hv_mem_diag.rs  parse_whea.ps1  phys_test.rs  ping_test.rs  probe_test.rs  read_cmos_freeze.rs  ring_monitor.bat  ring_monitor.ps1  (+2 more)
