[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
hypervisor = { path = "../hypervisor" }
log = "0.4.20"
kernel-log = "0.1.2"
com_logger = "0.1.1"

[build-dependencies]
cc = "1.2"
wdk-build = "0.2.0"
