[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[features]
default = []
secondary-ept = []

[dependencies]
x86 = "0.52.0"
x86_64 = "0.15.1"
bitfield = "0.17.0"
bitflags = "2.6.0"
static_assertions = "1.1.0"
wdk-sys = "0.2.0"
wdk-alloc = "0.2.0"
log = "0.4.20"
kernel-log = "0.1.2"
com_logger = "0.1.1"
iced-x86 = { version = "1.21.0", default-features = false, features = [
    "no_std", "decoder", "intel",
    "op_code_info", "instr_info",
] }
