[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-log = []
secondary-ept = []
shellcode-hook = []

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
x86 = "0.52.0"
x86_64 = "0.15"
thiserror-no-std = "2.0.2"
bitfield = "0.14.0"
bit_field = "0.10.2"
bitflags = "2.4.1"
elain = "0.3.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
obfstr = "0.4.3"
static_assertions = "1.1.0"
log = { version = "0.4.20", features = ["release_max_level_off"] }
kernel-log = "0.1.2"
com_logger = "0.1.1"
iced-x86 = { version = "1.20.0", default-features = false, features = ["no_std", "decoder", "block_encoder", "instr_info", "no_d3now", "no_evex", "no_vex", "no_xop"] }
bstr = { version = "1.9.0", default-features = false }

[build-dependencies]
wdk-build = "0.2.0"
